<resources>
    //Action Bar and Bottom Nav
    <string name="app_name">GitHub Mobile</string>
    <string name="home">Home</string>
    <string name="back">Back</string>
    <string name="profile_bottom">Profile</string>
    <string name="favorite">Favorites</string>
    <string name="settings">Settings</string>
    <string name="favorite_profile">Favorite Profile</string>
    <string name="your_profile">Your Profile</string>

    //Homepage
    <string name="explore">Explore softwares with GitHub Mobile!</string>
    <string name="active_users">Most Active Users</string>
    <string name="browse">Browse through the users with the highest commits!</string>
    <string name="search">Search a Developer</string>

    //RecyclerView
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="bio">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    //SearchUser Page
    <string name="search_user_app_bar_title">Developers</string>
    <string name="search_hint">Search</string>

    //Detail Action Bar
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="cancel">Cancel</string>

    //Details
    <string name="profile">User Profile</string>
    <string name="company">Company Name</string>
    <string name="location">Location Name</string>
    <string name="link">Link</string>
    <string name="follow_stats">Follower Following</string>
    <string name="following">Following</string>
    <string name="description">Description</string>
    <string name="pinned">Pinned</string>
    <string name="repository_name">repository_name</string>
    <string name="repository_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="number_of_stars">20.000</string>
    <string name="program_language">Language</string>
    <string name="repositories">Repositories</string>
    <string name="starred">Starred</string>
    <string name="Organizations">Organizations</string>
    <string name="number">33</string>


    //Fragments
    <string name="followers_tab_title">Followers</string>
    <string name="following_tab_title">Following</string>

    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>

    //Settings Page
    <string name="language_settings">Language Settings</string>
    <string name="brian_mohammed_catraguna">Brian Mohammed Catraguna</string>
    <string name="brian_username">briancatraguna</string>
    <string name="github_user">Github User</string>
    <string name="key_username">username</string>
    <string name="nothing">Nothing</string>
    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>
    <string name="language">language</string>
    <string name="switch_preference">switch_preference</string>
    <string name="reminder_title">Set Reminder at 9 a.m</string>
    <string name="summary_on">Reminder ON</string>
    <string name="summary_off">Reminder OFF</string>
</resources>