<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".OptionDialogFragment">

    <TextView
        android:id="@+id/share_button"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:text="@string/share"
        android:gravity="center"
        android:textColor="@color/back_color"
        android:textSize="20dp"/>
    <TextView
        android:id="@+id/report_button"
        android:padding="10dp"
        android:layout_marginTop="-2dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:text="@string/report"
        android:gravity="center"
        android:textColor="@color/back_color"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/cancel_button"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:text="@string/cancel"
        android:gravity="center"
        android:textColor="@color/back_color"
        android:textStyle="bold"
        android:textSize="20dp"/>
    
</LinearLayout>