<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile_picture_search"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/full_name_search"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:fontFamily="@font/freesansbold"
        android:text="@string/full_name"
        android:textColor="@color/lighter_black"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/img_profile_picture_search"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_search"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:fontFamily="@font/freesansoblique"
        android:text="@string/username"
        android:textColor="@color/light_black"
        android:textSize="16dp"
        app:layout_constraintStart_toEndOf="@+id/img_profile_picture_search"
        app:layout_constraintTop_toBottomOf="@+id/full_name_search" />

    <TextView
        android:id="@+id/bio_search"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:fontFamily="@font/freesans"
        android:text="@string/bio"
        android:textColor="@color/black"
        android:textSize="17dp"
        app:layout_constraintStart_toEndOf="@+id/img_profile_picture_search"
        app:layout_constraintTop_toBottomOf="@+id/username_search" />

</androidx.constraintlayout.widget.ConstraintLayout>