<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragment">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="315dp"
        android:background="@drawable/border"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/professorcat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/ralewaysemibold"
            android:text="@string/explore"
            android:textColor="@color/light_black"
            android:textSize="25dp"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/searchDev"
            android:backgroundTint="@color/github_button"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:fontFamily="@font/helvetica"
            android:textSize="18dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.709" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_github_profiles"
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/browse"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/item_row_github_profiles" />

    <TextView
        android:id="@+id/browse"
        android:layout_width="289dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/freesansoblique"
        android:text="@string/browse"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/rv_github_profiles"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activeUsers" />

    <TextView
        android:id="@+id/activeUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/freesansbold"
        android:text="@string/active_users"
        android:textColor="@color/lighter_black"
        android:textSize="23dp"
        app:layout_constraintBottom_toTopOf="@+id/browse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="14dp"
        android:src="@drawable/ic_baseline_check_box_24"
        app:layout_constraintBottom_toTopOf="@+id/browse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/activeUsers"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.0" />



</androidx.constraintlayout.widget.ConstraintLayout>